Organiza estrutura do projeto: adiciona pastas Entrega1, Entrega2, Entrega3 e Entrega4

--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
@@ -16,6 +16,24 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PixTransferReceiptActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConfirmPixPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConfirmPixTransferActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TransferirPixActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TelaPixActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
