--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".TransferirPixActivity"
             android:exported="false" />
         <activity
-            android:name=".TelaPixActivity"
+            android:name=".PixHomeActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
