--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PixHomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".PixTransferReceiptActivity"
             android:exported="false" />
         <activity
