--- a/src/Entrega 2/Frontend/NeonPay-Academy/app/build.gradle
+++ b/src/Entrega 2/Frontend/NeonPay-Academy/app/build.gradle
@@ -29,13 +29,13 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
     testImplementation libs.junit
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 }
