--- a/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
+++ b/src/Entrega 3/Frontend/NeonPay-Academy/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".FecapServicesActivity"
+            android:exported="false" />
+        <activity
             android:name=".PixKeyConfirmDeleteActivity"
             android:exported="false" />
         <activity
